--- a/css/styles.css
+++ b/css/styles.css
@@ -1683,6 +1683,7 @@ input[type="checkbox"] {
 /*     16. Contact     */
 /***********************/
 .form-2 {
+  /* padding-top: 5.625rem; //6.625rem */
   padding-top: 6.625rem;
   padding-bottom: 5.625rem;
   background-color: #fbfbfb;
