--- a/css/swiper.css
+++ b/css/swiper.css
@@ -10,6 +10,7 @@
  * Released on: December 19, 2018
  */
 .swiper-container {
+  background-color: #007aff;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
